CNSDEVCOLECT/force-app/main/default/objects/FinalStageBancaBE__c/FinalStageBancaBE__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Lista de estados finales para cambios de etapa en Servicio Backend de Oportunidades Banca.</description>
    <label>FinalStageBancaBE</label>
</CustomObject>