CNSDEVCOLECT/force-app/main/default/objects/FinalStageBancaBE__c/fields/FinalStatus__c.field-meta.xml
<CustomField>
    <fullName>FinalStatus__c</fullName>
    <label>FinalStatus</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>