CNSDEVCOLECT/force-app/main/default/objects/FinalStageBancaBE__c/fields/Id_FinalStatus__c.field-meta.xml
<CustomField>
    <fullName>Id_FinalStatus__c</fullName>
    <label>Id FinalStatus</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>