CNSDEVCOLECT/force-app/main/default/objects/FinalStageBancaBE__c/fields/Id_Stage__c.field-meta.xml
<CustomField>
    <fullName>Id_Stage__c</fullName>
    <label>Id Stage</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>