CNSDEVCOLECT/force-app/main/default/objects/FinalStageBancaBE__c/fields/Product_Bank__c.field-meta.xml
<CustomField>
    <fullName>Product_Bank__c</fullName>
    <description>Producto Banca asociado a la CS</description>
    <label>Product Bank</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>