CNSDEVCOLECT/force-app/main/default/objects/FinalStageBancaBE__c/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>NAME</columns>
    <columns>Id_Stage__c</columns>
    <columns>Stage__c</columns>
    <columns>Id_FinalStatus__c</columns>
    <columns>FinalStatus__c</columns>
    <columns>Product_Bank__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL</label>
</ListView>